# CTK

CMakeExternals/: DCMTK.cmake  ITK.cmake  VTK.cmake
Libs/PluginFramework/Testing/: CMakeLists.txt
Libs/PluginFramework/Testing/FrameworkTestPlugins/app_test/: ctkTestAppMain.cpp
Libs/PluginFramework/Testing/FrameworkTestPlugins/auth_plugin/: CMakeLists.txt  auth_plugin.cpp  auth_plugin.h  auth_plugin_activator.cpp  auth_plugin_activator.h  auth_plugin_service.h  main.cpp  manifest_headers.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/auth_plugin2/: CMakeLists.txt  auth_plugin.cpp  auth_plugin.h  auth_plugin_activator.cpp  auth_plugin_activator.h  target_libraries.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_add/: CMakeLists.txt  fit_add_activator.cpp  fit_add_activator.h  fit_add_plugin.cpp  fit_add_plugin.h  manifest_headers.cmake  target_libraries.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_add_proxy/: CMakeLists.txt  fit_add_proxy_activator.cpp  fit_add_proxy_activator.h  fit_add_proxy_plugin.cpp  fit_add_proxy_plugin.h  manifest_headers.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_add_strategy/: CMakeLists.txt  fit_add_strategy_activator.cpp  fit_add_strategy_activator.h  fit_add_strategy_plugin.cpp  fit_add_strategy_plugin.h  manifest_headers.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_demo_cpp/: CMakeLists.txt  fit_demo_main.cpp  fit_demo_plugin_cpp.cpp  fit_demo_plugin_cpp.h  fit_demo_plugin_cpp_activator.cpp  fit_demo_plugin_cpp_activator.h
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_demo_go/: CMakeLists.txt  fit_demo_plugin_go.cpp  fit_demo_plugin_go.h  fit_demo_plugin_go_activator.cpp  fit_demo_plugin_go_activator.h
Libs/PluginFramework/Testing/FrameworkTestPlugins/fit_demo_java/: CMakeLists.txt  fit_demo_plugin_java.cpp  fit_demo_plugin_java.h  fit_demo_plugin_java_activator.cpp  fit_demo_plugin_java_activator.h
Libs/PluginFramework/Testing/FrameworkTestPlugins/pluginA2_test/: manifest_headers.cmake
Libs/PluginFramework/Testing/FrameworkTestPlugins/service/: authentication_service.h  fit_add_proxy.h  fit_add_service.h  fit_add_strategy.h  fit_demo_service.h  fit_multiply_service.h
Libs/Visualization/VTK/Widgets/: ctkVTKAbstractView.cpp
